--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -920,20 +920,7 @@
       "\n",
       "Below are more details about the failures:\n",
       "--------------------------------------------------------------------------------\n",
-      "74 fits failed with the following error:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/anaconda3/envs/udemy-ds-ml/lib/python3.12/site-packages/sklearn/model_selection/_validation.py\", line 888, in _fit_and_score\n",
-      "    estimator.fit(X_train, y_train, **fit_params)\n",
-      "  File \"/opt/anaconda3/envs/udemy-ds-ml/lib/python3.12/site-packages/sklearn/base.py\", line 1466, in wrapper\n",
-      "    estimator._validate_params()\n",
-      "  File \"/opt/anaconda3/envs/udemy-ds-ml/lib/python3.12/site-packages/sklearn/base.py\", line 666, in _validate_params\n",
-      "    validate_parameter_constraints(\n",
-      "  File \"/opt/anaconda3/envs/udemy-ds-ml/lib/python3.12/site-packages/sklearn/utils/_param_validation.py\", line 95, in validate_parameter_constraints\n",
-      "    raise InvalidParameterError(\n",
-      "sklearn.utils._param_validation.InvalidParameterError: The 'max_features' parameter of RandomForestRegressor must be an int in the range [1, inf), a float in the range (0.0, 1.0], a str among {'sqrt', 'log2'} or None. Got 'auto' instead.\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "56 fits failed with the following error:\n",
+      "73 fits failed with the following error:\n",
       "Traceback (most recent call last):\n",
       "  File \"/opt/anaconda3/envs/udemy-ds-ml/lib/python3.12/site-packages/sklearn/model_selection/_validation.py\", line 888, in _fit_and_score\n",
       "    estimator.fit(X_train, y_train, **fit_params)\n",
@@ -944,6 +931,19 @@
       "  File \"/opt/anaconda3/envs/udemy-ds-ml/lib/python3.12/site-packages/sklearn/utils/_param_validation.py\", line 95, in validate_parameter_constraints\n",
       "    raise InvalidParameterError(\n",
       "sklearn.utils._param_validation.InvalidParameterError: The 'max_features' parameter of RandomForestRegressor must be an int in the range [1, inf), a float in the range (0.0, 1.0], a str among {'log2', 'sqrt'} or None. Got 'auto' instead.\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "57 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/anaconda3/envs/udemy-ds-ml/lib/python3.12/site-packages/sklearn/model_selection/_validation.py\", line 888, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"/opt/anaconda3/envs/udemy-ds-ml/lib/python3.12/site-packages/sklearn/base.py\", line 1466, in wrapper\n",
+      "    estimator._validate_params()\n",
+      "  File \"/opt/anaconda3/envs/udemy-ds-ml/lib/python3.12/site-packages/sklearn/base.py\", line 666, in _validate_params\n",
+      "    validate_parameter_constraints(\n",
+      "  File \"/opt/anaconda3/envs/udemy-ds-ml/lib/python3.12/site-packages/sklearn/utils/_param_validation.py\", line 95, in validate_parameter_constraints\n",
+      "    raise InvalidParameterError(\n",
+      "sklearn.utils._param_validation.InvalidParameterError: The 'max_features' parameter of RandomForestRegressor must be an int in the range [1, inf), a float in the range (0.0, 1.0], a str among {'sqrt', 'log2'} or None. Got 'auto' instead.\n",
       "\n",
       "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
       "/opt/anaconda3/envs/udemy-ds-ml/lib/python3.12/site-packages/sklearn/model_selection/_search.py:1102: UserWarning: One or more of the test scores are non-finite: [            nan -36381.35803154 -36032.25348021 -36015.71292697\n",
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1274,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1366,6 +1366,54 @@
     "5. Memverifikasi bahwa model yang disimpan berfungsi sama dengan model asli\n",
     "\n",
     "File-file pickle (.pkl) yang dihasilkan dapat digunakan untuk implementasi model di lingkungan produksi atau untuk penggunaan di masa mendatang."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Kesimpulan\n",
+    "\n",
+    "Berdasarkan analisis dan pemodelan yang telah dilakukan pada dataset mobil bekas di Arab Saudi, kita dapat menarik beberapa kesimpulan penting:\n",
+    "\n",
+    "### Hasil Analisis Data\n",
+    "1. Distribusi harga mobil bekas menunjukkan kecenderungan right-skewed, dengan mayoritas mobil berada di rentang harga yang lebih rendah\n",
+    "2. Terdapat korelasi positif antara tahun pembuatan dengan harga (0.29)\n",
+    "3. Merek premium seperti Bentley dan Mercedes menempati segmen harga tertinggi\n",
+    "\n",
+    "### Performa Model\n",
+    "1. Model Random Forest terpilih sebagai model terbaik dengan:\n",
+    "   - RMSE: 34,655.65\n",
+    "   - MAE: 25,764.88\n",
+    "   - R² Score: 0.3387\n",
+    "\n",
+    "2. Setelah hyperparameter tuning:\n",
+    "   - Terjadi peningkatan performa sebesar 3%\n",
+    "   - Parameter optimal ditemukan dengan n_estimators: 323, min_samples_leaf: 2\n",
+    "\n",
+    "### Faktor yang Mempengaruhi Harga\n",
+    "1. Jarak tempuh (Mileage) memiliki pengaruh terbesar\n",
+    "2. Ukuran mesin (Engine Size) menjadi faktor kedua terpenting\n",
+    "3. Tahun pembuatan dan tipe mobil menempati posisi ketiga dan keempat\n",
+    "\n",
+    "## Rekomendasi\n",
+    "\n",
+    "### Untuk Pengembangan Model\n",
+    "1. Mengumpulkan data tambahan untuk meningkatkan performa model\n",
+    "2. Menambahkan fitur baru seperti kondisi mobil dan history service\n",
+    "3. Mencoba teknik ensemble learning lainnya untuk meningkatkan akurasi\n",
+    "\n",
+    "### Untuk Pengguna Model\n",
+    "1. Mempertimbangkan jarak tempuh sebagai faktor utama dalam menentukan harga\n",
+    "2. Memperhatikan ukuran mesin dan tahun pembuatan sebagai faktor penting kedua\n",
+    "3. Menggunakan model ini sebagai referensi awal dalam penentuan harga\n",
+    "\n",
+    "### Untuk Pengembangan Bisnis\n",
+    "1. Fokus pada mobil-mobil dengan jarak tempuh rendah karena memiliki nilai jual lebih tinggi\n",
+    "2. Mempertimbangkan segmentasi pasar berdasarkan merek premium dan non-premium\n",
+    "3. Mengoptimalkan inventory berdasarkan faktor-faktor yang mempengaruhi harga\n",
+    "\n",
+    "Model ini dapat digunakan sebagai alat bantu dalam menentukan harga mobil bekas di Arab Saudi, namun tetap perlu mempertimbangkan faktor-faktor lain yang tidak tercakup dalam model seperti kondisi aktual mobil dan tren pasar terkini."
    ]
   }
  ],
