--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -11,20 +11,28 @@
     "Dalam proyek ini, kita akan menganalisis dataset mobil bekas di Arab Saudi untuk memahami faktor-faktor yang mempengaruhi harga mobil bekas dan mengembangkan model prediktif untuk memperkirakan harga mobil bekas.\n",
     "\n",
     "### Latar Belakang\n",
-    "Pasar mobil bekas di Arab Saudi adalah sektor yang signifikan dalam industri otomotif negara tersebut. Memahami dinamika harga dalam pasar ini sangat penting bagi berbagai pemangku kepentingan, termasuk dealer mobil, pembeli, dan penjual individu.\n",
+    "\n",
+    "Pasar mobil bekas di Arab Saudi merupakan sektor yang signifikan dalam industri otomotif negara tersebut. Memahami dinamika harga dalam pasar ini sangat penting bagi berbagai pemangku kepentingan, termasuk:\n",
+    "- Dealer mobil yang perlu menentukan harga kompetitif\n",
+    "- Pembeli potensial yang mencari nilai terbaik\n",
+    "- Penjual individu yang ingin memaksimalkan nilai jual\n",
+    "- Pembuat kebijakan yang memantau tren pasar\n",
     "\n",
     "### Tujuan Proyek\n",
+    "\n",
     "1. Mengidentifikasi faktor-faktor utama yang mempengaruhi harga mobil bekas di Arab Saudi.\n",
     "2. Mengembangkan model machine learning yang dapat memprediksi harga mobil bekas dengan akurasi tinggi.\n",
     "3. Memberikan wawasan yang dapat ditindaklanjuti kepada pemangku kepentingan dalam industri mobil bekas.\n",
     "\n",
     "### Pertanyaan Bisnis\n",
+    "\n",
     "1. Apa faktor-faktor yang paling mempengaruhi harga mobil bekas di Arab Saudi?\n",
     "2. Bagaimana karakteristik seperti merek, tahun pembuatan, dan jarak tempuh mempengaruhi harga?\n",
     "3. Apakah ada perbedaan signifikan dalam harga mobil bekas berdasarkan wilayah di Arab Saudi?\n",
     "4. Seberapa akurat kita dapat memprediksi harga mobil bekas berdasarkan karakteristiknya?\n",
     "\n",
     "### Metrik Evaluasi\n",
+    "\n",
     "Untuk mengevaluasi kinerja model prediksi harga, kita akan menggunakan metrik berikut:\n",
     "1. Mean Absolute Error (MAE)\n",
     "2. Root Mean Squared Error (RMSE)\n",
@@ -33,6 +41,7 @@
     "Metrik-metrik ini akan membantu kita mengukur seberapa dekat prediksi model dengan harga aktual dan seberapa baik model menjelaskan variabilitas dalam data.\n",
     "\n",
     "### Dampak Bisnis\n",
+    "\n",
     "Hasil dari proyek ini diharapkan dapat:\n",
     "1. Membantu dealer mobil dalam menentukan harga yang kompetitif untuk inventaris mereka.\n",
     "2. Memberikan panduan kepada pembeli potensial tentang harga wajar untuk mobil bekas tertentu.\n",
@@ -88,6 +97,8 @@
       "dtypes: bool(1), float64(1), int64(3), object(6)\n",
       "memory usage: 445.0+ KB\n",
       "None\n",
+      "\n",
+      "Sampel data:\n",
       "          Type          Region        Make  Gear_Type       Origin    Options  \\\n",
       "0      Corolla            Abha      Toyota     Manual        Saudi   Standard   \n",
       "1        Yukon          Riyadh         GMC  Automatic        Saudi       Full   \n",
@@ -101,6 +112,8 @@
       "2  2015          5.0   140000       False  260000  \n",
       "3  2015          2.4   220000       False   42000  \n",
       "4  2020          4.0    49000        True       0  \n",
+      "\n",
+      "Statistik deskriptif:\n",
       "              Year  Engine_Size       Mileage          Price\n",
       "count  5624.000000  5624.000000  5.624000e+03    5624.000000\n",
       "mean   2014.101885     3.295430  1.509234e+05   53074.058144\n",
@@ -114,8 +127,8 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
@@ -124,11 +137,9 @@
     "\n",
     "# Menampilkan informasi dasar dataset\n",
     "print(df.info())\n",
-    "\n",
-    "# Menampilkan beberapa baris pertama\n",
+    "print(\"\\nSampel data:\")\n",
     "print(df.head())\n",
-    "\n",
-    "# Statistik deskriptif\n",
+    "print(\"\\nStatistik deskriptif:\")\n",
     "print(df.describe())"
    ]
   },
@@ -920,7 +931,7 @@
       "\n",
       "Below are more details about the failures:\n",
       "--------------------------------------------------------------------------------\n",
-      "73 fits failed with the following error:\n",
+      "78 fits failed with the following error:\n",
       "Traceback (most recent call last):\n",
       "  File \"/opt/anaconda3/envs/udemy-ds-ml/lib/python3.12/site-packages/sklearn/model_selection/_validation.py\", line 888, in _fit_and_score\n",
       "    estimator.fit(X_train, y_train, **fit_params)\n",
@@ -933,7 +944,7 @@
       "sklearn.utils._param_validation.InvalidParameterError: The 'max_features' parameter of RandomForestRegressor must be an int in the range [1, inf), a float in the range (0.0, 1.0], a str among {'log2', 'sqrt'} or None. Got 'auto' instead.\n",
       "\n",
       "--------------------------------------------------------------------------------\n",
-      "57 fits failed with the following error:\n",
+      "52 fits failed with the following error:\n",
       "Traceback (most recent call last):\n",
       "  File \"/opt/anaconda3/envs/udemy-ds-ml/lib/python3.12/site-packages/sklearn/model_selection/_validation.py\", line 888, in _fit_and_score\n",
       "    estimator.fit(X_train, y_train, **fit_params)\n",
